--- a/index.html
+++ b/index.html
@@ -1,44 +1,18 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Project C79</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="main.js"></script>
-    </head>
-    <body>
-        <center>
-            <h3 style="margin: 20px;">List of the students in my class: </h3>
-            <div>
-                <span>
-                    1.
-                </span>
-                <input type="text" placeholder="name of the student" id="Nameofstudent1">
-                <br>
-                <span>
-                    2.
-                </span>
-                <input type="text" placeholder="name of the student" id="Nameofstudent2">
-                <br>
-                <span>
-                    3.
-                </span>
-                <input type="text" placeholder="name of the student" id="Nameofstudent3">
-                <br>
-                <span>
-                    4.
-                </span>
-                <input type="text" placeholder="name of the student" id="Nameofstudent4">
-                <br>
-                <span>
-                    5.
-                </span>
-                <input type="text" placeholder="name of the student" id="Nameofstudent5">
-                <br>
-                <button id="submitbtn" onclick="Submit()">Submit</button>
-                <div id="display_name">
-                    
-                </div>
-                <button id="sortbtn" onclick="Sorting()">Sort</button>
-            </div>
-        </center>
-    </body>
+<head>
+
+<title>C81</title>
+<link rel="stylesheet" type="text/css" href="C81style.css">
+</head>
+<body class="body_background">
+
+<center>
+	<h1>My First Canvas</h1>
+	<canvas id="myCanvas" height="800" width="800"></canvas>
+</center>
+
+
+<script src="C81main.js"></script>
+</body>
 </html>
